Changes in HARP-0.5.1:
- Increased ZShuffle speed.
- ZShuffle now preserves randomness.
- Advanced seek and jump commands unpause player.
- Increased speed of edit's album/artist/genre -> song.
- Fixed a bug in genre management.
- Increased genre, album, and artist list and play speeds.
- Removed incompatible OSSv3 macros.

Changes in HARP-0.5.0:
- Fixed bugs in edit, admin, tree.
- Increased insert speed.
- Added song insertion with information gathered from
	the file path.
- Changed debug messages.
	-v : Helpful user-level messages.
	-v -v : Debugging messages.
	-v -v -v : SQL queries, etc.
- Made listing more efficient.
- Made shuffles more efficient.
- Improved zshuffle algorithm.
	- Stat based shuffle interleaves into standard shuffle
		at a random interval.
- Added stat management to the admin menu.
- Improved player efficiency by moving to a callback system.

Changes in HARP-0.2.3:
- Added JACK output support.
- Added volume control to JACK
- Added basic resampling for JACK
- Fixed OSS audio settings.
- Fixed OSS volume control.
- Player now unpauses when a seek command is entered.
- Fixed a bug causing a song insert to fail when trying to insert a song
	without any meta data that has unescaped characters in the file name.

Changes in HARP-0.2.2.1:
- Fixed an error in song insertion caused by a query using the
	wrong database field.
- Fixed configure scripts.

Changes in HARP-0.2.2:
- Fixed a seg. fault when making a database change followed by
	a call to strToID on a name not in the database. 
- Fixed portal returns to allow sub-menus to return to the main menu.
- Fixed AAC metadata parsing.
- Added arguments to the song activation edit menu.
	Users may now specify the desired activation status.
- When searching for the ID of a string, HARP will now select an ID
	if one of the results is a match.
- Added genre tagging.
	- "--type=g" now available.
	- List all genres or all songs listed in specific genres.